--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </head>
   <body>
     <div class="white-box">
-      <img src="images/image-qr-code.png" alt="qr code" />
+      <img src="image-qr-code.png" alt="qr code" />
       <div class="text">
         <p class="first-paragraph">
           Improve your front-end skills by building projects
